<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/dimens_40dp">

            <TextView
                android:id="@+id/textView"
                style="@style/tv_big_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimens_20dp"
                android:layout_marginTop="@dimen/dimens_110dp"
                android:text="@string/label_welcome"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView2"
                style="@style/tv_regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimens_20dp"
                android:layout_marginTop="@dimen/dimens_4dp"
                android:text="@string/label_description_login"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/appCompatImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_login"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <TextView
                android:id="@+id/firstNameTv"
                style="@style/tv_medium_header"
                android:layout_width="@dimen/dimens_0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimens_20dp"
                android:text="@string/label_nama_depan"
                app:layout_constraintEnd_toStartOf="@+id/vertical_guideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/appCompatImageView" />

            <androidx.cardview.widget.CardView
                android:id="@+id/firstNameCard"
                android:layout_width="@dimen/dimens_0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dimens_20dp"
                android:layout_marginTop="@dimen/dimens_16dp"
                app:cardCornerRadius="@dimen/dimens_4dp"
                app:cardElevation="@dimen/dimens_4dp"
                app:layout_constraintEnd_toStartOf="@+id/vertical_guideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/firstNameTv">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/firstNameTill"
                    style="@style/CommonTextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintEnabled="false">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="Jhon"
                        android:imeOptions="actionNext"
                        android:inputType="textEmailAddress" />
                </com.google.android.material.textfield.TextInputLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/lastNameLabelTv"
                style="@style/tv_medium_header"
                android:layout_width="@dimen/dimens_0dp"
                android:layout_height="wrap_content"
                android:text="@string/label_nama_belakang"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/vertical_guideline"
                app:layout_constraintTop_toBottomOf="@+id/appCompatImageView" />

            <androidx.cardview.widget.CardView
                android:id="@+id/lastNameCard"
                android:layout_width="@dimen/dimens_0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dimens_20dp"
                android:layout_marginTop="@dimen/dimens_16dp"
                app:cardCornerRadius="@dimen/dimens_4dp"
                app:cardElevation="@dimen/dimens_4dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/vertical_guideline"
                app:layout_constraintTop_toBottomOf="@id/lastNameLabelTv">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/lastNameTil"
                    style="@style/CommonTextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintEnabled="false">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/label_doe"
                        android:imeOptions="actionNext"
                        android:inputType="textEmailAddress" />
                </com.google.android.material.textfield.TextInputLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/idCardTv"
                style="@style/tv_medium_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_20"
                android:layout_marginTop="@dimen/dimens_40dp"
                android:text="@string/label_no_ktp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/lastNameCard" />

            <androidx.cardview.widget.CardView
                android:id="@+id/idCardCard"
                android:layout_width="@dimen/dimens_0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16"
                android:layout_marginHorizontal="@dimen/margin_20"
                app:cardCornerRadius="@dimen/dimens_4dp"
                app:cardElevation="@dimen/dimens_4dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/idCardTv">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/idCardTil"
                    style="@style/CommonTextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintEnabled="false">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/label_masukkan_no_ktp_anda"
                        android:imeOptions="actionNext"
                        android:inputType="textEmailAddress" />
                </com.google.android.material.textfield.TextInputLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/emailTv"
                style="@style/tv_medium_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimens_40dp"
                android:layout_marginStart="@dimen/margin_20"
                android:text="@string/label_email"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/idCardCard" />

            <androidx.cardview.widget.CardView
                android:id="@+id/emailCard"
                android:layout_width="@dimen/dimens_0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16"
                android:layout_marginHorizontal="@dimen/margin_20"
                app:cardCornerRadius="@dimen/dimens_4dp"
                app:cardElevation="@dimen/dimens_4dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/emailTv">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/emailTil"
                    style="@style/CommonTextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintEnabled="false">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/label_masukkan_email_anda"
                        android:imeOptions="actionNext"
                        android:inputType="textEmailAddress" />
                </com.google.android.material.textfield.TextInputLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/numberPhoneTv"
                style="@style/tv_medium_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimens_40dp"
                android:layout_marginStart="@dimen/margin_20"
                android:text="@string/label_no_telpon"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/emailCard" />

            <androidx.cardview.widget.CardView
                android:id="@+id/numberPhoneCard"
                android:layout_width="@dimen/dimens_0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16"
                android:layout_marginHorizontal="@dimen/margin_20"
                app:cardCornerRadius="@dimen/dimens_4dp"
                app:cardElevation="@dimen/dimens_4dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/numberPhoneTv">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/numberPhoneTil"
                    style="@style/CommonTextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintEnabled="false">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/label_masukkan_no_telpon_anda"
                        android:imeOptions="actionNext"
                        android:inputType="textEmailAddress" />
                </com.google.android.material.textfield.TextInputLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/passwordTv"
                style="@style/tv_medium_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimens_40dp"
                android:layout_marginStart="@dimen/margin_20"
                android:text="@string/label_password"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/numberPhoneCard" />

            <androidx.cardview.widget.CardView
                android:id="@+id/passwordCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dimens_20dp"
                android:layout_marginTop="@dimen/dimens_16dp"
                app:cardCornerRadius="@dimen/dimens_4dp"
                app:cardElevation="@dimen/dimens_4dp"
                app:layout_constraintTop_toBottomOf="@id/passwordTv">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/passwordTil"
                    style="@style/CommonTextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:endIconMode="password_toggle"
                    app:passwordToggleDrawable="@drawable/ic_password"
                    app:hintEnabled="false">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/label_masukkan_password_anda"
                        android:imeOptions="actionNext"
                        android:inputType="textPassword" />
                </com.google.android.material.textfield.TextInputLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/confirmPasswordTv"
                style="@style/tv_medium_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimens_40dp"
                android:layout_marginStart="@dimen/margin_20"
                android:text="@string/label_konfirmasi_password"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/passwordCard" />

            <androidx.cardview.widget.CardView
                android:id="@+id/confirmPasswordCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dimens_20dp"
                android:layout_marginTop="@dimen/dimens_16dp"
                app:cardCornerRadius="@dimen/dimens_4dp"
                app:cardElevation="@dimen/dimens_4dp"
                app:layout_constraintTop_toBottomOf="@id/confirmPasswordTv">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/confirmPasswordTil"
                    style="@style/CommonTextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:endIconMode="password_toggle"
                    app:passwordToggleDrawable="@drawable/ic_password"
                    app:hintEnabled="false">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/label_masukkan_password_anda"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword" />
                </com.google.android.material.textfield.TextInputLayout>
            </androidx.cardview.widget.CardView>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/registerBtn"
                style="@style/button.primary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimens_40dp"
                android:layout_marginHorizontal="@dimen/dimens_20dp"
                android:minHeight="@dimen/dimens_48dp"
                android:text="@string/label_register"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/confirmPasswordCard" />

            <TextView
                style="@style/tv_small_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="@dimen/dimens_6dp"
                android:text="@string/label_sudah_punya_akun"
                android:textColor="@color/color_gray_text"
                app:layout_constraintEnd_toStartOf="@+id/vertical_guideline"
                app:layout_constraintTop_toBottomOf="@+id/registerBtn" />

            <TextView
                android:id="@+id/loginNowTv"
                style="@style/tv_small_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginStart="@dimen/dimens_6dp"
                android:text="@string/label_login_sekarang"
                android:fontFamily="@font/inter_semibold"
                app:layout_constraintStart_toStartOf="@+id/vertical_guideline"
                app:layout_constraintTop_toBottomOf="@+id/registerBtn" />

            <TextView
                style="@style/tv_small_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dimens_6dp"
                android:layout_marginTop="@dimen/dimens_40dp"
                android:text="@string/label_silk_all_right_reserved"
                android:textColor="@color/color_gray_text"
                android:drawablePadding="@dimen/dimens_8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/loginNowTv"
                app:drawableStartCompat="@drawable/ic_reserved" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/vertical_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>
</layout>